[gd_scene load_steps=12 format=2]

[ext_resource path="res://Shrek4.png" type="Texture" id=1]
[ext_resource path="res://Shrek1.png" type="Texture" id=2]
[ext_resource path="res://Shrek21.png" type="Texture" id=3]
[ext_resource path="res://Shrek2best.png" type="Texture" id=4]
[ext_resource path="res://Samir's Things/Shrekdeath1.png" type="Texture" id=5]
[ext_resource path="res://Samir's Things/Shrekdeath3.png" type="Texture" id=6]
[ext_resource path="res://Samir's Things/Shrekdeath2.png" type="Texture" id=7]
[ext_resource path="res://Samir's Things/New Piskel1.png" type="Texture" id=8]
[ext_resource path="res://Samir's Things/EnemyShrek.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ), null ],
"loop": false,
"name": "Death",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Run",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48.1686, 54.6339 )

[node name="EnemyShrek" type="Node2D"]
scale = Vector2( 3.6, 3.6 )

[node name="EnemyShrek1" type="KinematicBody2D" parent="."]
collision_mask = 0
script = ExtResource( 9 )

[node name="RayCast2D1" type="RayCast2D" parent="EnemyShrek1"]
position = Vector2( 6.414, 46.102 )
rotation = 3.14159
scale = Vector2( 10, 2.3 )
enabled = true

[node name="RayCast2D2" type="RayCast2D" parent="EnemyShrek1"]
position = Vector2( 52.022, -4.51471 )
rotation = 1.5708
scale = Vector2( 10, 2 )
enabled = true

[node name="RayCast2D3" type="RayCast2D" parent="EnemyShrek1"]
position = Vector2( -38.7954, 0.221298 )
rotation = -1.5708
scale = Vector2( 10, 2 )
enabled = true

[node name="RayCast2D4" type="RayCast2D" parent="EnemyShrek1"]
position = Vector2( 9.07101, -47 )
scale = Vector2( 10, 2.1 )
enabled = true

[node name="AnimatedShrek" type="AnimatedSprite" parent="EnemyShrek1"]
position = Vector2( 1, -2 )
frames = SubResource( 3 )
animation = "Run"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyShrek1"]
position = Vector2( 6.05069, -5.74876 )
shape = SubResource( 2 )
